[tool.poetry]
name = "cucumber"
version = "0.1.0"
description = ""
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
behave = "^1.2.6"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
